Fix unnecessary overflow
When creating tooltips without a height they could take up more space
than available on the page such that an overflow was created. This is
fixed by setting display to none until they are positioned and assigned
their final height.

--- a/static/style.css
+++ b/static/style.css
@@ -148,7 +148,7 @@ form {
     border-width: 2px;
     z-index: 1;
     box-shadow: 1px 1px var(--text-color-light);
-    display: flex;
+    display: none;
 }
 
 .abstract {
